--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "axios": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
