--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -12,6 +12,9 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@master
+    
+    - name: NodeInstall
+      run: sudo apt-get install node
       
     # Build
     - name: Build
