--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@main
     
     - name: NodeInstall
-      run: sudo apt-get install node
+      run: sudo apt-get install nodejs
       
     # Build
     - name: Build
