--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -18,7 +18,7 @@ jobs:
       
     # Build
     - name: Build
-      run: yarn build
+      run: yarn && yarn build
 
     - name: Deploy
       uses: garygrossgarten/github-action-scp@release
