--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.18.0",
+    "lib-flexible": "^0.3.2",
+    "postcss": "^8.1.9",
+    "postcss-loader": "^4.1.0",
+    "postcss-px2rem": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "axios": "^0.18.0"
+    "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "webpack": "5.0.0-alpha.9",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config config/dev.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
