--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
     "postcss-px2rem": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "webpack": "5.0.0-alpha.9",
-    "webpack-cli": "^4.2.0"
+    "webpack": "5.6.0",
+    "webpack-cli": "^4.2.0",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.1.5",
+    "@babel/core": "^7.11.4",
+    "@babel/node": "^7.11.4",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/plugin-transform-react-jsx-self": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/plugin-proposal-decorators":"^7.10.4",
+    "css-loader": "^4.2.2",
+    "reactstrap": "^8.5.1",
+    "style-loader": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +57,19 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ],
+    "presets": [
+      "react-app"
     ]
   }
 }
