--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -20,12 +20,14 @@ jobs:
     - name: Build
       run: yarn && yarn build
 
-    - name: Deploy1
-      uses: garygrossgarten/github-action-scp@release
-      with:
-        local: build
-        remote: /root/www/cruise-web/
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        concurrency: 20
+    - name: Deploy to Server # 2. deploy to remote server
+      uses: AEnterprise/rsync-deploy@v1.0 # Use a third party action (https://github.com/AEnterprise/rsync-deploy)
+      env:
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }} # use pre-configured secret (the private key)
+        ARGS: -avz --delete # must have this variable
+        SERVER_PORT: "22" # SSH port
+        FOLDER: ./build # folder to push (./ is the root of current repo)
+        SERVER_IP: ${{ secrets.HOST }} # use pre-configured ssh_host value (e.g., IP or domain.com）
+        USERNAME: ${{ secrets.USER }} # use pre-configured ssh_username value
+        SERVER_DESTINATION: /root/www/cruise-web/
+
