[feature] add flexiable

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -49,6 +50,7 @@
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
+    "postcss-px2rem": "^0.3.0",
     "postcss-safe-parser": "5.0.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
