--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/antd": "^1.0.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^0.18.0",
+    "antd": "^4.22.3",
+    "axios": "0.27.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -42,6 +48,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "js-wheel": "https://github.com/jiangxiaoqiang/js-wheel.git",
     "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -67,6 +74,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
+    "typescript": "^4.7.4",
     "url-loader": "4.1.1",
     "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
@@ -82,17 +90,21 @@
     "@babel/plugin-transform-react-jsx-self": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/moment": "^2.13.0",
+    "@types/react-redux": "^7.1.24",
+    "@types/webpack-env": "^1.17.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.1.5",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
-    "node-sass": "^5.0.0",
     "postcss-aspect-ratio-mini": "^1.1.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
     "reactstrap": "^8.5.1",
+    "sass": "1.54.1",
     "style-loader": "^1.2.1",
     "webpack": "5.6.0",
     "webpack-cli": "^4.2.0"
