--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -16,8 +16,10 @@ jobs:
         uses: borales/actions-yarn@v2.1.0
         with: 
          cmd: install
+      # https://stackoverflow.com/questions/71318659/gitgithub-com-permission-denied-publickey-when-using-yarn-to-install-github
       - name: Build React App
-        run: | 
+        run: |
+          git config --global url.https://github.com/.insteadOf git@github.com: 
           yarn
           yarn build
 
