--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -11,15 +11,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-      - name: Install yarn
-        uses: borales/actions-yarn@v2.1.0
-        with: 
-         cmd: install
+          node-version: 16
       # https://stackoverflow.com/questions/71318659/gitgithub-com-permission-denied-publickey-when-using-yarn-to-install-github
       - name: Build React App
         run: |
           git config --global url.https://github.com/.insteadOf git@github.com: 
+          npm install yarn -g
           yarn
           yarn build
 
