--- a/.github/workflows/tencent.yml
+++ b/.github/workflows/tencent.yml
@@ -35,7 +35,7 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG_DATA }}
-          command: set image --record deployment/cruise-web cruise-web=registry.cn-hangzhou.aliyuncs.com/reddwarf-pro/cruise-web:${{ github.sha }} -n reddwarf-pro
+          command: set image --record deployment/cruise-web cruise-web=registry.cn-hongkong.aliyuncs.com/reddwarf-pro/cruise-web:${{ github.sha }} -n reddwarf-pro
 
       - name: verify deployment
         uses: steebchen/kubectl@v2.0.0
