--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,10 @@ server {
   
   root /usr/share/nginx/html;
   
+  location / {
+    try_files $uri /index.html;
+  }
+  
   location /index.html {
 	  add_header Cache-Control no-cache;
   }
