refactor: tweak config

--- a/default.conf
+++ b/default.conf
@@ -12,3 +12,13 @@ server {
 	  add_header Cache-Control no-cache;
   }
 }
+
+
+server {
+  listen 80;
+  server_name ai.poemhub.top;
+
+  location / {
+    try_files $uri /product/genie/index
+  }
+}
