--- a/default.conf
+++ b/default.conf
@@ -12,3 +12,19 @@ server {
 	  add_header Cache-Control no-cache;
   }
 }
+
+
+server {
+  listen 80;
+  server_name ai.poemhub.top;
+  
+  root /usr/share/nginx/html;
+  
+  location / {
+    try_files $uri /index.html;
+  }
+  
+  location /index.html {
+	  add_header Cache-Control no-cache;
+  }
+}
