--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "postcss-preset-env": "6.7.0",
     "postcss-px2rem": "^0.3.0",
     "postcss-safe-parser": "5.0.2",
+    "qiankun": "^2.10.3",
+    "qs": "6.11.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
@@ -68,7 +70,6 @@
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.1",
-    "qs":"6.11.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.1.0",
@@ -78,12 +79,12 @@
     "ts-pnp": "1.2.0",
     "typescript": "^4.7.4",
     "url-loader": "4.1.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4",
-    "uuid": "^8.3.2"
+    "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
@@ -136,7 +137,7 @@
       "last 1 safari version",
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ]
   },
