--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "qs": "6.11.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-cookie": "^4.1.1",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^6.1.0",
