--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/antd": "^1.0.0",
     "@types/jest": "^28.1.6",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
