--- a/package.json
+++ b/package.json
@@ -6,49 +6,50 @@
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "@types/antd": "^1.0.0",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "antd": "^5.2.3",
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.17.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "antd": "^5.7.2",
+    "autoprefixer": "^10.4.14",
     "axios": "0.27.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-react-app": "^10.0.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "camelcase": "^6.1.0",
+    "camelcase": "^6.3.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "4.3.0",
-    "dompurify": "^2.2.2",
+    "dompurify": "^2.4.7",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
+    "eslint": "^7.32.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.1.0",
+    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^3.10.2",
+    "eslint-webpack-plugin": "^2.7.0",
     "file-loader": "6.1.1",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
-    "js-wheel": "https://github.com/jiangxiaoqiang/js-wheel.git",
     "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -59,70 +60,64 @@
     "postcss-preset-env": "6.7.0",
     "postcss-px2rem": "^0.3.0",
     "postcss-safe-parser": "5.0.2",
-    "qiankun": "^2.10.3",
+    "qiankun": "^2.10.11",
     "qs": "6.11.0",
-    "react": "^17.0.1",
+    "rdjs-wheel": "0.0.19",
+    "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.0",
-    "react-dom": "^17.0.1",
+    "react-dev-utils": "^11.0.4",
+    "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.9",
     "react-refresh": "^0.8.3",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.1",
+    "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1",
     "resolve": "1.18.1",
-    "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.1.0",
+    "resolve-url-loader": "^3.1.5",
+    "sass-loader": "^10.4.1",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.7.4",
+    "typescript": "^4.9.5",
     "url-loader": "4.1.1",
     "uuid": "^8.3.2",
+    "vite": "^4.4.6",
     "web-vitals": "^0.2.4",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.0",
-    "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
-    "@babel/node": "^7.11.4",
-    "@babel/plugin-proposal-decorators": "^7.10.4",
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/plugin-transform-react-jsx-self": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/node": "^7.22.6",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/plugin-transform-react-jsx-self": "^7.22.5",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/moment": "^2.13.0",
-    "@types/react-redux": "^7.1.24",
-    "@types/webpack-env": "^1.17.0",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/webpack-env": "^1.18.1",
     "babel": "^6.23.0",
     "babel-loader": "^8.1.5",
     "css-loader": "^4.2.2",
-    "cssnano": "^4.1.10",
+    "cssnano": "^4.1.11",
     "postcss-aspect-ratio-mini": "^1.1.0",
-    "postcss-cssnext": "^3.1.0",
+    "postcss-cssnext": "^3.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "reactstrap": "^8.5.1",
+    "rd-component": "^0.1.120",
+    "reactstrap": "^8.10.1",
     "sass": "1.54.1",
-    "style-loader": "^1.2.1",
-    "webpack": "5.6.0",
-    "webpack-cli": "^4.2.0"
+    "style-loader": "^1.2.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "CI=false && node scripts/build.js",
-    "test": "node scripts/test.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "legacy-build": "CI=false && node scripts/build.js",
+    "test": "node scripts/test.js",
+    "build": "tsc && vite build",
+    "dev": "vite --host=0.0.0.0 --port=3000"
   },
   "browserslist": {
     "production": [
@@ -140,58 +135,6 @@
       "not dead",
       "not op_mini all"
     ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "/Users/dolphin/Sync/source/cruise-web/node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "babel": {
     "presets": [
