--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,33 @@
 server {
   listen 80;
   server_name read.poemhub.top;
+
+  gzip on;
+  gzip_comp_level 5;
+  gzip_min_length 1k;
+  gzip_buffers 4 16k;
+  gzip_proxied any;
+  gzip_vary on;
+  gzip_types
+  application/javascript
+  application/x-javascript
+  text/javascript
+  text/css
+  text/xml
+  application/xhtml+xml
+  application/xml
+  application/atom+xml
+  application/rdf+xml
+  application/rss+xml
+  application/geo+json
+  application/json
+  application/ld+json
+  application/manifest+json
+  application/x-web-app-manifest+json
+  image/svg+xml
+  text/x-cross-domain-policy;
+  gzip_static on;
+  gzip_disable "MSIE [1-6]\.";
   
   root /usr/share/nginx/html;
   
